Set fixed width in intro p To vertically align

--- a/styles.css
+++ b/styles.css
@@ -201,7 +201,7 @@ margin: 0 auto;
 /* Footer */
 footer {
     text-align: center;
-    padding: 50px 150px;
+    padding: 30px 150px;
 }
 .log-in, .log-in:visited {
     color: #622363;
@@ -221,16 +221,11 @@ footer {
 
 .form-page p {
     margin-left: 50px;
-    border: 1px solid black;
-    width: 80%;
 }
-.intro {
-   
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
 
- 
+.intro {
+    width: 80%;
+    height: 12vh;
 }
 
 
@@ -248,7 +243,7 @@ footer {
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 160px;
+    height: 14vh;
     background-color: rgba(0,0,0,0.3);
     width: 100%;
     flex-shrink: 2;
